--- a/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo.test/pom.xml
+++ b/kermeta_compilerv2_projects/fr.irisa.triskell.kermeta.scala.compilo.test/pom.xml
@@ -1,199 +1,225 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.irisa.triskell</groupId>
-	<artifactId>kermtea.scala.compilo.test</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>fr.irisa.triskell</groupId>
+    <artifactId>kermtea.scala.compilo.test</artifactId>
+    <version>0.0.2-SNAPSHOT</version>
 	
-	<repositories>
-		<repository>
-			<id>thirdparty</id>
-			<name>Irisa Tipimouss Nexus ThirdParty</name>
-			<url>http://tipimouss.irisa.fr:8081/nexus/content/repositories/thirdparty</url>
-		</repository>
-		
-		<repository>
-			<id>triskellPublic</id>
-			<url>http://tipimouss.irisa.fr:8081/nexus/content/groups/public</url>
-		</repository>
-		
-	</repositories>
+    <repositories>
+        <repository>
+            <id>scala-tools.org</id>
+            <name>Scala-tools Maven2 Repository</name>
+            <url>http://scala-tools.org/repo-releases</url>
+        </repository>
+        <repository>
+            <id>repoNetbeans</id>
+            <url>http://bits.netbeans.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>scala-tools.org</id>
+            <name>Scala-tools Maven2 Repository</name>
+            <url>http://scala-tools.org/repo-snapshots</url>
+        </repository>
+        <repository>
+            <id>kermetaPublicSnapshot</id>
+            <url>http://www.kermeta.org/maven2-snapshots</url>
+        </repository>
+        <repository>
+            <id>kermetaPublicSnapshot</id>
+            <url>http://www.kermeta.org/maven2</url>
+        </repository>
+        <repository>
+            <id>tipimoussSnapshot</id>
+            <url>http://tipimouss/maven2-snapshots</url>
+        </repository>
+        <repository>
+            <id>tipimouss</id>
+            <url>http://tipimouss/maven2</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>scala-tools.org</id>
+            <name>Scala-tools Maven2 Repository</name>
+            <url>http://scala-tools.org/repo-releases</url>
+        </pluginRepository>
+    </pluginRepositories>
 	
-	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-		</plugins>
-		<resources>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
             <resource>
                 <directory>resources</directory>
             </resource>
         </resources>		
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.7</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>fr.irisa.triskell</groupId>
-			<artifactId>kermeta.compilo.scala</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
-			<scope>compile</scope>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.7</version>
+            <type>jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>fr.irisa.triskell</groupId>
+            <artifactId>kermeta.compilo.scala</artifactId>
+            <version>0.0.2-BETA3</version>
+            <scope>compile</scope>
 
-			<exclusions>
-				<exclusion>
-					<groupId>javax.mail</groupId>
-					<artifactId>mail</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>javax.jms</groupId>
-					<artifactId>jms</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jdmk</groupId>
-					<artifactId>jmxtools</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jmx</groupId>
-					<artifactId>jmxri</artifactId>
-				</exclusion>
-			</exclusions>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.mail</groupId>
+                    <artifactId>mail</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jmx</groupId>
+                    <artifactId>jmxri</artifactId>
+                </exclusion>
+            </exclusions>
 
-		</dependency>
+        </dependency>
 		
 		
-		<dependency>
-			<groupId>fr.irisa.triskell</groupId>
-			<artifactId>kermeta.model</artifactId>
-			<version>1.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>fr.irisa.triskell</groupId>
-			<artifactId>kermeta.emf</artifactId>
-			<version>2.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>fr.irisa.triskell</groupId>
-			<artifactId>kermeta.emf.common</artifactId>
-			<version>2.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>fr.irisa.triskell</groupId>
-			<artifactId>kermeta.emf.ecore</artifactId>
-			<version>2.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>fr.irisa.triskell</groupId>
-			<artifactId>kermeta.emf.ecore.xmi</artifactId>
-			<version>2.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.5.9.RC1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
-			<type>jar</type>
-			<scope>compile</scope>
+        <dependency>
+            <groupId>fr.irisa.triskell</groupId>
+            <artifactId>kermeta.model</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.irisa.triskell</groupId>
+            <artifactId>kermeta.emf</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.irisa.triskell</groupId>
+            <artifactId>kermeta.emf.common</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.irisa.triskell</groupId>
+            <artifactId>kermeta.emf.ecore</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.irisa.triskell</groupId>
+            <artifactId>kermeta.emf.ecore.xmi</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.5.9.RC1</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.15</version>
+            <type>jar</type>
+            <scope>compile</scope>
 
-			<exclusions>
-				<exclusion>
-					<groupId>javax.mail</groupId>
-					<artifactId>mail</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>javax.jms</groupId>
-					<artifactId>jms</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jdmk</groupId>
-					<artifactId>jmxtools</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jmx</groupId>
-					<artifactId>jmxri</artifactId>
-				</exclusion>
-			</exclusions>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.mail</groupId>
+                    <artifactId>mail</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jdmk</groupId>
+                    <artifactId>jmxtools</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jmx</groupId>
+                    <artifactId>jmxri</artifactId>
+                </exclusion>
+            </exclusions>
 
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.5.9.RC1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>stringtemplate</artifactId>
-			<version>3.2.1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.8.0.RC1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-compiler</artifactId>
-			<version>2.8.0.RC1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta</groupId>
-			<artifactId>art.model</artifactId>
-			<version>1.0.0</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse</groupId>
-			<artifactId>uml2</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse</groupId>
-			<artifactId>uml2.common</artifactId>
-			<version>1.5.0</version>
-		</dependency> 
-		<dependency>
-			<groupId>fr.irisa.triskell</groupId>
-			<artifactId>kermeta.scala.framework</artifactId>
-			<version>0.0.3</version>
-			<scope>compile</scope>
-		</dependency>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.5.9.RC1</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>stringtemplate</artifactId>
+            <version>3.2.1</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.8.0</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>2.8.0.RC1</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kermeta</groupId>
+            <artifactId>art.model</artifactId>
+            <version>1.0.0</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>uml2</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>uml2.common</artifactId>
+            <version>1.5.0</version>
+        </dependency> 
+        <dependency>
+            <groupId>fr.irisa.triskell</groupId>
+            <artifactId>kermeta.scala.framework</artifactId>
+            <version>0.0.5</version>
+            <scope>compile</scope>
+        </dependency>
 		
-		<dependency>
-			<groupId>fr.irisa.triskell</groupId>
-			<artifactId>kermeta_standalone</artifactId>
-			<version>1.3.4</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-	</dependencies>
-	<properties>
-		<maven.compile.source>1.6</maven.compile.source>
-		<maven.compile.target>1.6</maven.compile.target>
-	</properties>
+        <dependency>
+            <groupId>fr.irisa.triskell</groupId>
+            <artifactId>kermeta_standalone</artifactId>
+            <version>1.3.4</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+    <properties>
+        <maven.compile.source>1.6</maven.compile.source>
+        <maven.compile.target>1.6</maven.compile.target>
+    </properties>
 </project>
