--- a/art2_projects/org.kermeta.art2.editor.nb/pom.xml
+++ b/art2_projects/org.kermeta.art2.editor.nb/pom.xml
@@ -2,12 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.kermeta.art2</groupId>
     <artifactId>art2.editor.nb</artifactId>
     <packaging>nbm</packaging>
-    <version>1.0-SNAPSHOT</version>
     <name>ART2 :: Editor :: NetBeans</name>
-    
+
+    <parent>
+        <artifactId>art2.root</artifactId>
+        <groupId>org.kermeta.art2</groupId>
+        <version>2.2.1-SNAPSHOT</version>
+    </parent>
+
+
     <repositories>
         <!-- this is a remote repository hosting the netbeans api artifacts.
          the versions of the artifacts are netbeans IDE release based, eg. RELEASE65.
@@ -27,51 +32,51 @@
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-openide-util</artifactId>
-            <version>RELEASE68</version>
+            <version>RELEASE691</version>
         </dependency>
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-openide-windows</artifactId>
-            <version>RELEASE68</version>
+            <version>RELEASE691</version>
         </dependency>
-        <!--
+        
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-openide-util-lookup</artifactId>
-            <version></version>
-        </dependency>-->
+            <version>RELEASE691</version>
+        </dependency>
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-openide-awt</artifactId>
-            <version>RELEASE68</version>
+            <version>RELEASE691</version>
         </dependency>
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-netbeans-modules-settings</artifactId>
-            <version>RELEASE68</version>
+            <version>RELEASE691</version>
         </dependency>
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-openide-filesystems</artifactId>
-            <version>RELEASE68</version>
+            <version>RELEASE691</version>
         </dependency>
         <dependency>
             <artifactId>org-openide-text</artifactId>
             <groupId>org.netbeans.api</groupId>
             <type>jar</type>
-            <version>RELEASE68</version>
+            <version>RELEASE691</version>
         </dependency>
         <dependency>
             <artifactId>org-openide-nodes</artifactId>
             <groupId>org.netbeans.api</groupId>
             <type>jar</type>
-            <version>RELEASE68</version>
+            <version>RELEASE691</version>
         </dependency>
         <dependency>
             <artifactId>org-openide-loaders</artifactId>
             <groupId>org.netbeans.api</groupId>
             <type>jar</type>
-            <version>RELEASE68</version>
+            <version>RELEASE691</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -93,21 +98,9 @@
                 <extensions>true</extensions>
                 <configuration>
                     <useOSGiDependencies>false</useOSGiDependencies>
-                    <netbeansInstallation>/Applications/NetBeans/NetBeans 6.9 Beta.app/Contents/Resources/NetBeans</netbeansInstallation>
+                    <netbeansInstallation>/Applications/NetBeans/NetBeans 6.9.1.app/Contents/Resources/NetBeans</netbeansInstallation>
                 </configuration>
             </plugin>
-            
-            <plugin>
-                <!-- netbeans modules in 6.9+ are 1.6 compatible -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -117,22 +110,9 @@
                     <useDefaultManifestFile>true</useDefaultManifestFile>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
 
-        <distributionManagement>
-        <repository>
-            <id>tipimouss-local-maven-repository</id>
-            <name>Tipimouss Local release repository</name>
-            <url>file:/var/www/html/maven2private</url>
-            <uniqueVersion>false</uniqueVersion>
-        </repository>
-        <snapshotRepository>
-            <id>tipimouss-local-maven-repository</id>
-            <name>Tipimouss Local  snapshot repository</name>
-            <url>file:/var/www/html/maven2private-snapshots</url>
-            <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
